--- a/LKaifer_BugTracker/Views/Home/Index.cshtml
+++ b/LKaifer_BugTracker/Views/Home/Index.cshtml
@@ -39,13 +39,16 @@
         transform: rotate(180deg);
     }
 
+
+
     div.panel-heading {
         cursor: move;
     }
 
     .panel-statistics {
-        background: linear-gradient(to right, #ff9900 0%, #ffff00 100%);
-        color: white
+            background: #0b7bc1!important;
+            color: #fff !important;
+            text-transform: uppercase !important;
     }
 
     .panel-projects {
@@ -54,8 +57,9 @@
     }
 
     .panel-red {
-        background: linear-gradient(to left, #0000ff 0%, #99ccff 100%);
-        color: white;
+            background: #0b7bc1!important;
+            color: #fff !important;
+            text-transform: uppercase !important;
     }
 
     .bars_agileits.agile_info_shadow {
